Update openapi.yaml and adapt readers to changes
